parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    NULL
    EXPONENTIAL
    MOD

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID vars_opt rutinas lienzo
Rule 2     vars_opt -> vars
Rule 3     vars_opt -> empty
Rule 4     empty -> <empty>
Rule 5     vars -> VAR tipo SEMICOLON vars_loop
Rule 6     vars_loop -> vars
Rule 7     vars_loop -> empty
Rule 8     rutinas -> RUTINA rutina_opt COLON ID LPARENTHESIS parametros RPARENTHESIS bloque_rutina rutinas_loop
Rule 9     rutina_opt -> primitivo
Rule 10    rutina_opt -> figura
Rule 11    rutina_opt -> VOID
Rule 12    rutinas_loop -> rutinas
Rule 13    rutinas_loop -> empty
Rule 14    tipo -> tipo_opt
Rule 15    tipo_opt -> tipo_opt_prim
Rule 16    tipo_opt -> tipo_opt_fig
Rule 17    tipo_opt_prim -> primitivo tipo_opt_prim_loop
Rule 18    tipo_opt_prim_loop -> ID tipo_opt_prim_2 tipo_opt_prim_loop_2
Rule 19    tipo_opt_prim_loop_2 -> COMA tipo_opt_prim_loop
Rule 20    tipo_opt_prim_loop_2 -> empty
Rule 21    tipo_opt_prim_2 -> ini_prim
Rule 22    tipo_opt_prim_2 -> LBRACKET logica RBRACKET tipo_opt_prim_3
Rule 23    tipo_opt_prim_2 -> empty
Rule 24    tipo_opt_prim_3 -> ini_prim_v
Rule 25    tipo_opt_prim_3 -> empty
Rule 26    tipo_opt_fig -> figura ID tipo_opt_fig_2
Rule 27    tipo_opt_fig_loop -> COMA tipo_opt_fig
Rule 28    tipo_opt_fig_loop -> empty
Rule 29    tipo_opt_fig_2 -> ini_fgra
Rule 30    tipo_opt_fig_2 -> LBRACKET logica RBRACKET tipo_opt_fig_3
Rule 31    tipo_opt_fig_2 -> empty
Rule 32    tipo_opt_fig_3 -> ini_fgra_v
Rule 33    tipo_opt_fig_3 -> empty
Rule 34    ini_prim -> ASIGN logica
Rule 35    ini_prim_v -> ASIGN LBRACE logica ini_prim_v_loop RBRACE
Rule 36    ini_prim_v_loop -> COMA logica ini_prim_v_loop
Rule 37    ini_prim_v_loop -> empty
Rule 38    ini_fgra -> ASIGN fgra_nva
Rule 39    ini_fgra_v -> COMA logica ini_fgras_v_loop
Rule 40    ini_fgra_v -> empty
Rule 41    ini_fgras_v_loop -> COMA logica ini_fgras_v_loop
Rule 42    ini_fgras_v_loop -> empty
Rule 43    fgra_nva -> NUEVO fgra_atr
Rule 44    fgra_nva -> empty
Rule 45    fgra_atr -> PINCEL LPARENTHESIS fgra_atr_end
Rule 46    fgra_atr -> CUAD LPARENTHESIS exp COMA fgra_atr_end
Rule 47    fgra_atr -> CIRC LPARENTHESIS exp COMA fgra_atr_end
Rule 48    fgra_atr -> RECT LPARENTHESIS exp COMA exp COMA fgra_atr_end
Rule 49    fgra_atr -> TRIANG LPARENTHESIS exp COMA exp COMA exp COMA exp COMA fgra_atr_end
Rule 50    fgra_atr_end -> exp COMA exp COMA color RPARENTHESIS
Rule 51    primitivo -> TYPEINT
Rule 52    primitivo -> TYPEDOUBLE
Rule 53    primitivo -> TYPEBOOL
Rule 54    primitivo -> TYPESTRING
Rule 55    figura -> PINCEL
Rule 56    figura -> CUAD
Rule 57    figura -> RECT
Rule 58    figura -> CIRC
Rule 59    figura -> TRIANG
Rule 60    cte -> STRING
Rule 61    cte -> INT
Rule 62    cte -> DOUBLE
Rule 63    cte -> BOOL
Rule 64    parametros -> param_list parametros_loop
Rule 65    parametros -> empty
Rule 66    parametros_loop -> COMA parametros
Rule 67    parametros_loop -> empty
Rule 68    param_list -> tipo_param ID param_list_loop
Rule 69    param_list -> empty
Rule 70    param_list_loop -> COMA param_list
Rule 71    param_list_loop -> empty
Rule 72    tipo_param -> primitivo
Rule 73    tipo_param -> figura
Rule 74    lienzo -> MAIN bloque_lienzo
Rule 75    bloque -> LBRACE bloque_loop RBRACE
Rule 76    bloque_loop -> estatuto bloque_loop
Rule 77    bloque_loop -> empty
Rule 78    bloque_rutina -> LBRACE bloque_rutina_opt bloque_rutina_loop bloque_rutina_opt_2 RBRACE
Rule 79    bloque_rutina_opt -> vars
Rule 80    bloque_rutina_opt -> empty
Rule 81    bloque_rutina_loop -> estatuto bloque_rutina_loop
Rule 82    bloque_rutina_loop -> empty
Rule 83    bloque_rutina_opt_2 -> RETURN logica SEMICOLON
Rule 84    bloque_rutina_opt_2 -> empty
Rule 85    bloque_lienzo -> LBRACE bloque_lienzo_loop RBRACE
Rule 86    bloque_lienzo_loop -> estatuto_lienzo bloque_lienzo_loop
Rule 87    bloque_lienzo_loop -> empty
Rule 88    estatuto -> asignacion
Rule 89    estatuto -> condicion
Rule 90    estatuto -> ciclo
Rule 91    estatuto -> impresion
Rule 92    estatuto -> lectura
Rule 93    estatuto -> accion
Rule 94    estatuto -> llamada
Rule 95    estatuto -> comentario
Rule 96    estatuto_lienzo -> vars
Rule 97    estatuto_lienzo -> asignacion
Rule 98    estatuto_lienzo -> condicion
Rule 99    estatuto_lienzo -> ciclo
Rule 100   estatuto_lienzo -> impresion
Rule 101   estatuto_lienzo -> lectura
Rule 102   estatuto_lienzo -> accion
Rule 103   estatuto_lienzo -> llamada
Rule 104   estatuto_lienzo -> comentario
Rule 105   comentario -> COMMENT
Rule 106   asignacion -> ID asignacion_opt ASIGN asignacion_opt_2 SEMICOLON
Rule 107   asignacion_opt -> LBRACKET logica RBRACKET
Rule 108   asignacion_opt -> empty
Rule 109   asignacion_opt_2 -> logica
Rule 110   asignacion_opt_2 -> lectura
Rule 111   asignacion_opt_2 -> fgra_nva
Rule 112   condicion -> IF condicion_loop condicion_opt
Rule 113   condicion_loop -> LPARENTHESIS logica RPARENTHESIS bloque condicion_loop_opt
Rule 114   condicion_loop_opt -> ELIF condicion_loop
Rule 115   condicion_loop_opt -> empty
Rule 116   condicion_opt -> ELSE bloque
Rule 117   condicion_opt -> empty
Rule 118   ciclo -> WHILE LPARENTHESIS logica RPARENTHESIS bloque
Rule 119   impresion -> PRINT LPARENTHESIS logica RPARENTHESIS SEMICOLON
Rule 120   lectura -> READ LPARENTHESIS RPARENTHESIS SEMICOLON
Rule 121   llamada -> ID LPARENTHESIS exp llamada_loop RPARENTHESIS COLON
Rule 122   llamada_loop -> COMA exp llamada_loop
Rule 123   llamada_loop -> empty
Rule 124   logica -> expresion logica_loop
Rule 125   logica_loop -> AND logica
Rule 126   logica_loop -> OR logica
Rule 127   logica_loop -> empty
Rule 128   expresion -> exp expresion_opt
Rule 129   expresion_opt -> expresion_opt_opt exp
Rule 130   expresion_opt -> empty
Rule 131   expresion_opt_opt -> GTHAN
Rule 132   expresion_opt_opt -> GETHAN
Rule 133   expresion_opt_opt -> ASIGN ASIGN
Rule 134   expresion_opt_opt -> NOTEQUAL
Rule 135   expresion_opt_opt -> LTHAN
Rule 136   expresion_opt_opt -> LETHAN
Rule 137   exp -> termino exp_loop
Rule 138   exp_loop -> PLUS exp
Rule 139   exp_loop -> MINUS exp
Rule 140   exp_loop -> empty
Rule 141   termino -> factor termino_loop
Rule 142   termino_loop -> TIMES termino
Rule 143   termino_loop -> DIVIDE termino
Rule 144   termino_loop -> empty
Rule 145   factor -> LPARENTHESIS expresion RPARENTHESIS
Rule 146   factor -> factor_opt factor_opt_2
Rule 147   factor_opt -> PLUS
Rule 148   factor_opt -> MINUS
Rule 149   factor_opt -> empty
Rule 150   factor_opt_2 -> cte
Rule 151   factor_opt_2 -> idllamada
Rule 152   idllamada -> ID idllamada_opt
Rule 153   idllamada_opt -> LPARENTHESIS exp idllamada_opt_loop RPARENTHESIS
Rule 154   idllamada_opt -> LPARENTHESIS idllamada_opt_loop RPARENTHESIS
Rule 155   idllamada_opt -> LBRACKET expresion RBRACKET
Rule 156   idllamada_opt -> empty
Rule 157   idllamada_opt_loop -> COMA exp idllamada_opt_loop
Rule 158   idllamada_opt_loop -> empty
Rule 159   accion -> ID POINT accion_opt SEMICOLON
Rule 160   accion_opt -> accion_figura
Rule 161   accion_opt -> accion_pincel
Rule 162   accion_figura -> accion_figura_opt RPARENTHESIS
Rule 163   accion_figura_opt -> accion_figura_opt_2
Rule 164   accion_figura_opt -> accion_figura_opt_3
Rule 165   accion_figura_opt_2 -> MOVEA accion_figura_opt_2_end
Rule 166   accion_figura_opt_2 -> ROTATE accion_figura_opt_2_end
Rule 167   accion_figura_opt_2 -> GROW accion_figura_opt_2_end
Rule 168   accion_figura_opt_2 -> THICK accion_figura_opt_2_end
Rule 169   accion_figura_opt_2_end -> LPARENTHESIS expresion
Rule 170   accion_figura_opt_3 -> REMOVE LPARENTHESIS
Rule 171   accion_figura_opt_3 -> FILL LPARENTHESIS color
Rule 172   accion_pincel -> accion_pincel_opt RPARENTHESIS
Rule 173   accion_pincel_opt -> COLOR LPARENTHESIS color
Rule 174   accion_pincel_opt -> DISPLACE accion_pincel_opt_end
Rule 175   accion_pincel_opt -> PAINT accion_pincel_opt_end
Rule 176   accion_pincel_opt -> GRAPH LPARENTHESIS CTEFUNCION COMA exp
Rule 177   accion_pincel_opt_end -> LPARENTHESIS expresion COMA expresion
Rule 178   color -> CTECOLOR
Rule 179   color -> CTEHEXCOLOR

Terminals, with rules where they appear

AND                  : 125
ASIGN                : 34 35 38 106 133 133
BOOL                 : 63
CIRC                 : 47 58
COLON                : 8 121
COLOR                : 173
COMA                 : 19 27 36 39 41 46 47 48 48 49 49 49 49 50 50 66 70 122 157 176 177
COMMENT              : 105
CTECOLOR             : 178
CTEFUNCION           : 176
CTEHEXCOLOR          : 179
CUAD                 : 46 56
DISPLACE             : 174
DIVIDE               : 143
DOUBLE               : 62
ELIF                 : 114
ELSE                 : 116
EXPONENTIAL          : 
FILL                 : 171
GETHAN               : 132
GRAPH                : 176
GROW                 : 167
GTHAN                : 131
ID                   : 1 8 18 26 68 106 121 152 159
IF                   : 112
INT                  : 61
LBRACE               : 35 75 78 85
LBRACKET             : 22 30 107 155
LETHAN               : 136
LPARENTHESIS         : 8 45 46 47 48 49 113 118 119 120 121 145 153 154 169 170 171 173 176 177
LTHAN                : 135
MAIN                 : 74
MINUS                : 139 148
MOD                  : 
MOVEA                : 165
NOTEQUAL             : 134
NUEVO                : 43
NULL                 : 
OR                   : 126
PAINT                : 175
PINCEL               : 45 55
PLUS                 : 138 147
POINT                : 159
PRINT                : 119
PROGRAMA             : 1
RBRACE               : 35 75 78 85
RBRACKET             : 22 30 107 155
READ                 : 120
RECT                 : 48 57
REMOVE               : 170
RETURN               : 83
ROTATE               : 166
RPARENTHESIS         : 8 50 113 118 119 120 121 145 153 154 162 172
RUTINA               : 8
SEMICOLON            : 5 83 106 119 120 159
STRING               : 60
THICK                : 168
TIMES                : 142
TRIANG               : 49 59
TYPEBOOL             : 53
TYPEDOUBLE           : 52
TYPEINT              : 51
TYPESTRING           : 54
VAR                  : 5
VOID                 : 11
WHILE                : 118
error                : 

Nonterminals, with rules where they appear

accion               : 93 102
accion_figura        : 160
accion_figura_opt    : 162
accion_figura_opt_2  : 163
accion_figura_opt_2_end : 165 166 167 168
accion_figura_opt_3  : 164
accion_opt           : 159
accion_pincel        : 161
accion_pincel_opt    : 172
accion_pincel_opt_end : 174 175
asignacion           : 88 97
asignacion_opt       : 106
asignacion_opt_2     : 106
bloque               : 113 116 118
bloque_lienzo        : 74
bloque_lienzo_loop   : 85 86
bloque_loop          : 75 76
bloque_rutina        : 8
bloque_rutina_loop   : 78 81
bloque_rutina_opt    : 78
bloque_rutina_opt_2  : 78
ciclo                : 90 99
color                : 50 171 173
comentario           : 95 104
condicion            : 89 98
condicion_loop       : 112 114
condicion_loop_opt   : 113
condicion_opt        : 112
cte                  : 150
empty                : 3 7 13 20 23 25 28 31 33 37 40 42 44 65 67 69 71 77 80 82 84 87 108 115 117 123 127 130 140 144 149 156 158
estatuto             : 76 81
estatuto_lienzo      : 86
exp                  : 46 47 48 48 49 49 49 49 50 50 121 122 128 129 138 139 153 157 176
exp_loop             : 137
expresion            : 124 145 155 169 177 177
expresion_opt        : 128
expresion_opt_opt    : 129
factor               : 141
factor_opt           : 146
factor_opt_2         : 146
fgra_atr             : 43
fgra_atr_end         : 45 46 47 48 49
fgra_nva             : 38 111
figura               : 10 26 73
idllamada            : 151
idllamada_opt        : 152
idllamada_opt_loop   : 153 154 157
impresion            : 91 100
ini_fgra             : 29
ini_fgra_v           : 32
ini_fgras_v_loop     : 39 41
ini_prim             : 21
ini_prim_v           : 24
ini_prim_v_loop      : 35 36
lectura              : 92 101 110
lienzo               : 1
llamada              : 94 103
llamada_loop         : 121 122
logica               : 22 30 34 35 36 39 41 83 107 109 113 118 119 125 126
logica_loop          : 124
param_list           : 64 70
param_list_loop      : 68
parametros           : 8 66
parametros_loop      : 64
primitivo            : 9 17 72
programa             : 0
rutina_opt           : 8
rutinas              : 1 12
rutinas_loop         : 8
termino              : 137 142 143
termino_loop         : 141
tipo                 : 5
tipo_opt             : 14
tipo_opt_fig         : 16 27
tipo_opt_fig_2       : 26
tipo_opt_fig_3       : 30
tipo_opt_fig_loop    : 
tipo_opt_prim        : 15
tipo_opt_prim_2      : 18
tipo_opt_prim_3      : 22
tipo_opt_prim_loop   : 17 19
tipo_opt_prim_loop_2 : 18
tipo_param           : 68
vars                 : 2 6 79 96
vars_loop            : 5
vars_opt             : 1

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID vars_opt rutinas lienzo

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID vars_opt rutinas lienzo

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . vars_opt rutinas lienzo
    (2) vars_opt -> . vars
    (3) vars_opt -> . empty
    (5) vars -> . VAR tipo SEMICOLON vars_loop
    (4) empty -> .

    VAR             shift and go to state 6
    RUTINA          reduce using rule 4 (empty -> .)

    vars                           shift and go to state 4
    vars_opt                       shift and go to state 5
    empty                          shift and go to state 7

state 4

    (2) vars_opt -> vars .

    RUTINA          reduce using rule 2 (vars_opt -> vars .)


state 5

    (1) programa -> PROGRAMA ID vars_opt . rutinas lienzo
    (8) rutinas -> . RUTINA rutina_opt COLON ID LPARENTHESIS parametros RPARENTHESIS bloque_rutina rutinas_loop

    RUTINA          shift and go to state 9

    rutinas                        shift and go to state 8

state 6

    (5) vars -> VAR . tipo SEMICOLON vars_loop
    (14) tipo -> . tipo_opt
    (15) tipo_opt -> . tipo_opt_prim
    (16) tipo_opt -> . tipo_opt_fig
    (17) tipo_opt_prim -> . primitivo tipo_opt_prim_loop
    (26) tipo_opt_fig -> . figura ID tipo_opt_fig_2
    (51) primitivo -> . TYPEINT
    (52) primitivo -> . TYPEDOUBLE
    (53) primitivo -> . TYPEBOOL
    (54) primitivo -> . TYPESTRING
    (55) figura -> . PINCEL
    (56) figura -> . CUAD
    (57) figura -> . RECT
    (58) figura -> . CIRC
    (59) figura -> . TRIANG

    TYPEINT         shift and go to state 21
    TYPEDOUBLE      shift and go to state 17
    TYPEBOOL        shift and go to state 18
    TYPESTRING      shift and go to state 13
    PINCEL          shift and go to state 15
    CUAD            shift and go to state 24
    RECT            shift and go to state 23
    CIRC            shift and go to state 22
    TRIANG          shift and go to state 20

    tipo_opt_prim                  shift and go to state 10
    tipo_opt_fig                   shift and go to state 11
    tipo                           shift and go to state 12
    tipo_opt                       shift and go to state 14
    figura                         shift and go to state 16
    primitivo                      shift and go to state 19

state 7

    (3) vars_opt -> empty .

    RUTINA          reduce using rule 3 (vars_opt -> empty .)


state 8

    (1) programa -> PROGRAMA ID vars_opt rutinas . lienzo
    (74) lienzo -> . MAIN bloque_lienzo

    MAIN            shift and go to state 26

    lienzo                         shift and go to state 25

state 9

    (8) rutinas -> RUTINA . rutina_opt COLON ID LPARENTHESIS parametros RPARENTHESIS bloque_rutina rutinas_loop
    (9) rutina_opt -> . primitivo
    (10) rutina_opt -> . figura
    (11) rutina_opt -> . VOID
    (51) primitivo -> . TYPEINT
    (52) primitivo -> . TYPEDOUBLE
    (53) primitivo -> . TYPEBOOL
    (54) primitivo -> . TYPESTRING
    (55) figura -> . PINCEL
    (56) figura -> . CUAD
    (57) figura -> . RECT
    (58) figura -> . CIRC
    (59) figura -> . TRIANG

    VOID            shift and go to state 30
    TYPEINT         shift and go to state 21
    TYPEDOUBLE      shift and go to state 17
    TYPEBOOL        shift and go to state 18
    TYPESTRING      shift and go to state 13
    PINCEL          shift and go to state 15
    CUAD            shift and go to state 24
    RECT            shift and go to state 23
    CIRC            shift and go to state 22
    TRIANG          shift and go to state 20

    rutina_opt                     shift and go to state 27
    figura                         shift and go to state 28
    primitivo                      shift and go to state 29

state 10

    (15) tipo_opt -> tipo_opt_prim .

    SEMICOLON       reduce using rule 15 (tipo_opt -> tipo_opt_prim .)


state 11

    (16) tipo_opt -> tipo_opt_fig .

    SEMICOLON       reduce using rule 16 (tipo_opt -> tipo_opt_fig .)


state 12

    (5) vars -> VAR tipo . SEMICOLON vars_loop

    SEMICOLON       shift and go to state 31


state 13

    (54) primitivo -> TYPESTRING .

    ID              reduce using rule 54 (primitivo -> TYPESTRING .)
    COLON           reduce using rule 54 (primitivo -> TYPESTRING .)


state 14

    (14) tipo -> tipo_opt .

    SEMICOLON       reduce using rule 14 (tipo -> tipo_opt .)


state 15

    (55) figura -> PINCEL .

    ID              reduce using rule 55 (figura -> PINCEL .)
    COLON           reduce using rule 55 (figura -> PINCEL .)


state 16

    (26) tipo_opt_fig -> figura . ID tipo_opt_fig_2

    ID              shift and go to state 32


state 17

    (52) primitivo -> TYPEDOUBLE .

    ID              reduce using rule 52 (primitivo -> TYPEDOUBLE .)
    COLON           reduce using rule 52 (primitivo -> TYPEDOUBLE .)


state 18

    (53) primitivo -> TYPEBOOL .

    ID              reduce using rule 53 (primitivo -> TYPEBOOL .)
    COLON           reduce using rule 53 (primitivo -> TYPEBOOL .)


state 19

    (17) tipo_opt_prim -> primitivo . tipo_opt_prim_loop
    (18) tipo_opt_prim_loop -> . ID tipo_opt_prim_2 tipo_opt_prim_loop_2

    ID              shift and go to state 33

    tipo_opt_prim_loop             shift and go to state 34

state 20

    (59) figura -> TRIANG .

    ID              reduce using rule 59 (figura -> TRIANG .)
    COLON           reduce using rule 59 (figura -> TRIANG .)


state 21

    (51) primitivo -> TYPEINT .

    ID              reduce using rule 51 (primitivo -> TYPEINT .)
    COLON           reduce using rule 51 (primitivo -> TYPEINT .)


state 22

    (58) figura -> CIRC .

    ID              reduce using rule 58 (figura -> CIRC .)
    COLON           reduce using rule 58 (figura -> CIRC .)


state 23

    (57) figura -> RECT .

    ID              reduce using rule 57 (figura -> RECT .)
    COLON           reduce using rule 57 (figura -> RECT .)


state 24

    (56) figura -> CUAD .

    ID              reduce using rule 56 (figura -> CUAD .)
    COLON           reduce using rule 56 (figura -> CUAD .)


state 25

    (1) programa -> PROGRAMA ID vars_opt rutinas lienzo .

    $end            reduce using rule 1 (programa -> PROGRAMA ID vars_opt rutinas lienzo .)


state 26

    (74) lienzo -> MAIN . bloque_lienzo
    (85) bloque_lienzo -> . LBRACE bloque_lienzo_loop RBRACE

    LBRACE          shift and go to state 36

    bloque_lienzo                  shift and go to state 35

state 27

    (8) rutinas -> RUTINA rutina_opt . COLON ID LPARENTHESIS parametros RPARENTHESIS bloque_rutina rutinas_loop

    COLON           shift and go to state 37


state 28

    (10) rutina_opt -> figura .

    COLON           reduce using rule 10 (rutina_opt -> figura .)


state 29

    (9) rutina_opt -> primitivo .

    COLON           reduce using rule 9 (rutina_opt -> primitivo .)


state 30

    (11) rutina_opt -> VOID .

    COLON           reduce using rule 11 (rutina_opt -> VOID .)


state 31

    (5) vars -> VAR tipo SEMICOLON . vars_loop
    (6) vars_loop -> . vars
    (7) vars_loop -> . empty
    (5) vars -> . VAR tipo SEMICOLON vars_loop
    (4) empty -> .

  ! shift/reduce conflict for VAR resolved as shift
    VAR             shift and go to state 6
    RUTINA          reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    IF              reduce using rule 4 (empty -> .)
    WHILE           reduce using rule 4 (empty -> .)
    PRINT           reduce using rule 4 (empty -> .)
    READ            reduce using rule 4 (empty -> .)
    COMMENT         reduce using rule 4 (empty -> .)
    RBRACE          reduce using rule 4 (empty -> .)
    RETURN          reduce using rule 4 (empty -> .)

  ! VAR             [ reduce using rule 4 (empty -> .) ]

    vars_loop                      shift and go to state 39
    empty                          shift and go to state 40
    vars                           shift and go to state 38

state 32

    (26) tipo_opt_fig -> figura ID . tipo_opt_fig_2
    (29) tipo_opt_fig_2 -> . ini_fgra
    (30) tipo_opt_fig_2 -> . LBRACKET logica RBRACKET tipo_opt_fig_3
    (31) tipo_opt_fig_2 -> . empty
    (38) ini_fgra -> . ASIGN fgra_nva
    (4) empty -> .

    LBRACKET        shift and go to state 44
    ASIGN           shift and go to state 43
    SEMICOLON       reduce using rule 4 (empty -> .)

    ini_fgra                       shift and go to state 41
    tipo_opt_fig_2                 shift and go to state 42
    empty                          shift and go to state 45

state 33

    (18) tipo_opt_prim_loop -> ID . tipo_opt_prim_2 tipo_opt_prim_loop_2
    (21) tipo_opt_prim_2 -> . ini_prim
    (22) tipo_opt_prim_2 -> . LBRACKET logica RBRACKET tipo_opt_prim_3
    (23) tipo_opt_prim_2 -> . empty
    (34) ini_prim -> . ASIGN logica
    (4) empty -> .

    LBRACKET        shift and go to state 47
    ASIGN           shift and go to state 49
    COMA            reduce using rule 4 (empty -> .)
    SEMICOLON       reduce using rule 4 (empty -> .)

    tipo_opt_prim_2                shift and go to state 46
    ini_prim                       shift and go to state 48
    empty                          shift and go to state 50

state 34

    (17) tipo_opt_prim -> primitivo tipo_opt_prim_loop .

    SEMICOLON       reduce using rule 17 (tipo_opt_prim -> primitivo tipo_opt_prim_loop .)


state 35

    (74) lienzo -> MAIN bloque_lienzo .

    $end            reduce using rule 74 (lienzo -> MAIN bloque_lienzo .)


state 36

    (85) bloque_lienzo -> LBRACE . bloque_lienzo_loop RBRACE
    (86) bloque_lienzo_loop -> . estatuto_lienzo bloque_lienzo_loop
    (87) bloque_lienzo_loop -> . empty
    (96) estatuto_lienzo -> . vars
    (97) estatuto_lienzo -> . asignacion
    (98) estatuto_lienzo -> . condicion
    (99) estatuto_lienzo -> . ciclo
    (100) estatuto_lienzo -> . impresion
    (101) estatuto_lienzo -> . lectura
    (102) estatuto_lienzo -> . accion
    (103) estatuto_lienzo -> . llamada
    (104) estatuto_lienzo -> . comentario
    (4) empty -> .
    (5) vars -> . VAR tipo SEMICOLON vars_loop
    (106) asignacion -> . ID asignacion_opt ASIGN asignacion_opt_2 SEMICOLON
    (112) condicion -> . IF condicion_loop condicion_opt
    (118) ciclo -> . WHILE LPARENTHESIS logica RPARENTHESIS bloque
    (119) impresion -> . PRINT LPARENTHESIS logica RPARENTHESIS SEMICOLON
    (120) lectura -> . READ LPARENTHESIS RPARENTHESIS SEMICOLON
    (159) accion -> . ID POINT accion_opt SEMICOLON
    (121) llamada -> . ID LPARENTHESIS exp llamada_loop RPARENTHESIS COLON
    (105) comentario -> . COMMENT

    RBRACE          reduce using rule 4 (empty -> .)
    VAR             shift and go to state 6
    ID              shift and go to state 64
    IF              shift and go to state 61
    WHILE           shift and go to state 53
    PRINT           shift and go to state 54
    READ            shift and go to state 52
    COMMENT         shift and go to state 56

    vars                           shift and go to state 51
    bloque_lienzo_loop             shift and go to state 58
    ciclo                          shift and go to state 57
    llamada                        shift and go to state 59
    comentario                     shift and go to state 55
    condicion                      shift and go to state 60
    lectura                        shift and go to state 62
    empty                          shift and go to state 63
    accion                         shift and go to state 65
    asignacion                     shift and go to state 66
    estatuto_lienzo                shift and go to state 67
    impresion                      shift and go to state 68

state 37

    (8) rutinas -> RUTINA rutina_opt COLON . ID LPARENTHESIS parametros RPARENTHESIS bloque_rutina rutinas_loop

    ID              shift and go to state 69


state 38

    (6) vars_loop -> vars .

    RUTINA          reduce using rule 6 (vars_loop -> vars .)
    VAR             reduce using rule 6 (vars_loop -> vars .)
    ID              reduce using rule 6 (vars_loop -> vars .)
    IF              reduce using rule 6 (vars_loop -> vars .)
    WHILE           reduce using rule 6 (vars_loop -> vars .)
    PRINT           reduce using rule 6 (vars_loop -> vars .)
    READ            reduce using rule 6 (vars_loop -> vars .)
    COMMENT         reduce using rule 6 (vars_loop -> vars .)
    RBRACE          reduce using rule 6 (vars_loop -> vars .)
    RETURN          reduce using rule 6 (vars_loop -> vars .)


state 39

    (5) vars -> VAR tipo SEMICOLON vars_loop .

    VAR             reduce using rule 5 (vars -> VAR tipo SEMICOLON vars_loop .)
    ID              reduce using rule 5 (vars -> VAR tipo SEMICOLON vars_loop .)
    IF              reduce using rule 5 (vars -> VAR tipo SEMICOLON vars_loop .)
    WHILE           reduce using rule 5 (vars -> VAR tipo SEMICOLON vars_loop .)
    PRINT           reduce using rule 5 (vars -> VAR tipo SEMICOLON vars_loop .)
    READ            reduce using rule 5 (vars -> VAR tipo SEMICOLON vars_loop .)
    COMMENT         reduce using rule 5 (vars -> VAR tipo SEMICOLON vars_loop .)
    RBRACE          reduce using rule 5 (vars -> VAR tipo SEMICOLON vars_loop .)
    RUTINA          reduce using rule 5 (vars -> VAR tipo SEMICOLON vars_loop .)
    RETURN          reduce using rule 5 (vars -> VAR tipo SEMICOLON vars_loop .)


state 40

    (7) vars_loop -> empty .

    RUTINA          reduce using rule 7 (vars_loop -> empty .)
    VAR             reduce using rule 7 (vars_loop -> empty .)
    ID              reduce using rule 7 (vars_loop -> empty .)
    IF              reduce using rule 7 (vars_loop -> empty .)
    WHILE           reduce using rule 7 (vars_loop -> empty .)
    PRINT           reduce using rule 7 (vars_loop -> empty .)
    READ            reduce using rule 7 (vars_loop -> empty .)
    COMMENT         reduce using rule 7 (vars_loop -> empty .)
    RBRACE          reduce using rule 7 (vars_loop -> empty .)
    RETURN          reduce using rule 7 (vars_loop -> empty .)


state 41

    (29) tipo_opt_fig_2 -> ini_fgra .

    SEMICOLON       reduce using rule 29 (tipo_opt_fig_2 -> ini_fgra .)


state 42

    (26) tipo_opt_fig -> figura ID tipo_opt_fig_2 .

    SEMICOLON       reduce using rule 26 (tipo_opt_fig -> figura ID tipo_opt_fig_2 .)


state 43

    (38) ini_fgra -> ASIGN . fgra_nva
    (43) fgra_nva -> . NUEVO fgra_atr
    (44) fgra_nva -> . empty
    (4) empty -> .

    NUEVO           shift and go to state 70
    SEMICOLON       reduce using rule 4 (empty -> .)

    empty                          shift and go to state 71
    fgra_nva                       shift and go to state 72

state 44

    (30) tipo_opt_fig_2 -> LBRACKET . logica RBRACKET tipo_opt_fig_3
    (124) logica -> . expresion logica_loop
    (128) expresion -> . exp expresion_opt
    (137) exp -> . termino exp_loop
    (141) termino -> . factor termino_loop
    (145) factor -> . LPARENTHESIS expresion RPARENTHESIS
    (146) factor -> . factor_opt factor_opt_2
    (147) factor_opt -> . PLUS
    (148) factor_opt -> . MINUS
    (149) factor_opt -> . empty
    (4) empty -> .

    LPARENTHESIS    shift and go to state 74
    PLUS            shift and go to state 77
    MINUS           shift and go to state 81
    STRING          reduce using rule 4 (empty -> .)
    INT             reduce using rule 4 (empty -> .)
    DOUBLE          reduce using rule 4 (empty -> .)
    BOOL            reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)

    expresion                      shift and go to state 73
    logica                         shift and go to state 75
    empty                          shift and go to state 76
    termino                        shift and go to state 78
    exp                            shift and go to state 79
    factor                         shift and go to state 80
    factor_opt                     shift and go to state 82

state 45

    (31) tipo_opt_fig_2 -> empty .

    SEMICOLON       reduce using rule 31 (tipo_opt_fig_2 -> empty .)


state 46

    (18) tipo_opt_prim_loop -> ID tipo_opt_prim_2 . tipo_opt_prim_loop_2
    (19) tipo_opt_prim_loop_2 -> . COMA tipo_opt_prim_loop
    (20) tipo_opt_prim_loop_2 -> . empty
    (4) empty -> .

    COMA            shift and go to state 84
    SEMICOLON       reduce using rule 4 (empty -> .)

    empty                          shift and go to state 85
    tipo_opt_prim_loop_2           shift and go to state 83

state 47

    (22) tipo_opt_prim_2 -> LBRACKET . logica RBRACKET tipo_opt_prim_3
    (124) logica -> . expresion logica_loop
    (128) expresion -> . exp expresion_opt
    (137) exp -> . termino exp_loop
    (141) termino -> . factor termino_loop
    (145) factor -> . LPARENTHESIS expresion RPARENTHESIS
    (146) factor -> . factor_opt factor_opt_2
    (147) factor_opt -> . PLUS
    (148) factor_opt -> . MINUS
    (149) factor_opt -> . empty
    (4) empty -> .

    LPARENTHESIS    shift and go to state 74
    PLUS            shift and go to state 77
    MINUS           shift and go to state 81
    STRING          reduce using rule 4 (empty -> .)
    INT             reduce using rule 4 (empty -> .)
    DOUBLE          reduce using rule 4 (empty -> .)
    BOOL            reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)

    expresion                      shift and go to state 73
    logica                         shift and go to state 86
    empty                          shift and go to state 76
    termino                        shift and go to state 78
    exp                            shift and go to state 79
    factor                         shift and go to state 80
    factor_opt                     shift and go to state 82

state 48

    (21) tipo_opt_prim_2 -> ini_prim .

    COMA            reduce using rule 21 (tipo_opt_prim_2 -> ini_prim .)
    SEMICOLON       reduce using rule 21 (tipo_opt_prim_2 -> ini_prim .)


state 49

    (34) ini_prim -> ASIGN . logica
    (124) logica -> . expresion logica_loop
    (128) expresion -> . exp expresion_opt
    (137) exp -> . termino exp_loop
    (141) termino -> . factor termino_loop
    (145) factor -> . LPARENTHESIS expresion RPARENTHESIS
    (146) factor -> . factor_opt factor_opt_2
    (147) factor_opt -> . PLUS
    (148) factor_opt -> . MINUS
    (149) factor_opt -> . empty
    (4) empty -> .
